# multibot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.claude/: settings.local.json
.github/workflows/: ci-cd.yml
config/: base.yaml
config/bots/: admin.yaml  example_bot.yaml  horoscope_bot.yaml  md2pdf_bot.yaml
docker/: Dockerfile  docker-compose.yml
docs/: BILLING.md  DOCKER.md  HOROSCOPE_BOT.md  PLUGINS.md  QUICKSTART.md
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial.py  002_drop_plugin_states_fk.py  003_add_bot_statistics.py  004_token_system.py
src/: __init__.py  main.py
src/admin/: __init__.py  middleware.py  notifier.py  plugin.py
src/billing/: __init__.py  decorators.py  exceptions.py  models.py  repository.py  token_manager.py
src/core/: __init__.py  app.py  bot_manager.py  config.py  dispatcher_factory.py  exceptions.py
src/database/: __init__.py  connection.py  models.py
src/health/: __init__.py  checks.py  server.py
src/middleware/: __init__.py  database.py  error_handling.py  logging.py  rate_limit.py  stats.py  tokens.py
src/plugins/: __init__.py  base.py  loader.py  registry.py
src/stats/: __init__.py  collector.py  models.py  repository.py  service.py
src/utils/: __init__.py  logging.py  signals.py  watcher.py
src/webhook/: __init__.py  server.py
tests/: __init__.py  conftest.py
tests/integration/: test_md2pdf_handlers.py
tests/unit/: test_billing.py  test_config.py  test_md2pdf.py  test_plugins.py  test_stats.py
(+27 files in other folders)
